--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blwebsite",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://courtneycaputo.github.io/BLWebsite",
+  "homepage": "https://courtneycaputo.github.io/BLWebsite2",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -26,6 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
 
   },
